syntax = "proto3";

option java_package = "helloworld";         // define el package Java
option java_outer_classname = "HelloWorldProto"; // define la clase contenedora de los mensajes

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
